--- a/index.html
+++ b/index.html
@@ -22,21 +22,23 @@
             <h1 class="hero-title">Turn the music up!</h1>
         </header>
         <section class="selling-points container"> <!-- selling points -->
-            <div class="point column third>">    
+            <div class="point column third">    
                 <span class="ion-music-note"></span>
                 <h5 class="point-title">Choose your music</h5>
                 <p class="point-description">The world is full of music; why should you have to listen to music that somebody else chose?</p>
             </div>
-            <div class="point column third>">    
+            <div class="point column third">    
                 <span class="ion-radio-waves"></span>
                 <h5 class="point-title">Unlimited, streaming, add-free</h5>
                 <p class="point-description">No arbitrary limits. No distractions.</p>
             </div>
-            <div class="point column third>">    
+            <div class="point column third">    
                 <span class="ion-iphone"></span>
                 <h5 class="point-title">Mobil enabled</h5>
                 <p class="point-description">Listen to your music on the go.  This streaming service is available on all mobil platforms.</p>
             </div> 
         </section>
+        
+        <script src= "scripts/landing.js"></script>
     </body>
 </html>
