Assignment 8 DOM (mispelled COM in branch name) scripting: completed

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                 <h5 class="point-title">Choose your music</h5>
                 <p class="point-description">The world is full of music; why should you have to listen to music that somebody else chose?</p>
             </div>
-            <div class="point column third">    
+            <div class="point column third pointTwo">    
                 <span class="ion-radio-waves"></span>
                 <h5 class="point-title">Unlimited, streaming, add-free</h5>
                 <p class="point-description">No arbitrary limits. No distractions.</p>
             </div>
-            <div class="point column third">    
+            <div class="point column third pointThree">    
                 <span class="ion-iphone"></span>
                 <h5 class="point-title">Mobil enabled</h5>
                 <p class="point-description">Listen to your music on the go.  This streaming service is available on all mobil platforms.</p>
